fix rails vulnerability. update to rails 3.2.11

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,7 +6,7 @@
             </li>
             <%= active_link 'Edit account', edit_user_registration_path %>
             <%= active_link 'My Brews', gallery_brews_path  %>
-            
+            <%= active_link 'Dashboard', user_path(current_user) %>
     <% else %>
             <%= active_link 'Login', new_user_session_path  %>  
             <%= active_link 'Sign up', new_user_registration_path  %>
